--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:file:~/b
+spring.datasource.url=jdbc:h2:file:./data/database;IFEXISTS=TRUE;AUTO_SERVER=TRUE;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
