--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port = 80
+spring.resources.chain.cache=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:file:./data/database;IFEXISTS=TRUE;AUTO_SERVER=TRUE;
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:h2:file:./data/database;AUTO_SERVER=TRUE;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
