--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:file:./data/database;AUTO_SERVER=TRUE;
+spring.datasource.url=jdbc:h2:file:./data/database;IFEXISTS=TRUE;AUTO_SERVER=TRUE;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.cache.type=NONE
