--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 80
 spring.resources.chain.cache=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.web-allow-others=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
@@ -10,4 +10,3 @@ spring.datasource.url=jdbc:h2:file:./data/database;IFEXISTS=TRUE;AUTO_SERVER=TRU
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.cache.type=NONE
