Fix gitignore deleting stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-data/
+/data/
 
 # Created by https://www.gitignore.io/api/gradle,eclipse,intellij,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=gradle,eclipse,intellij,visualstudiocode
