--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,4 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/gradle,eclipse,intellij,visualstudiocode
 
 # Download files
-src/main/resources/static/files/
+/files/
