--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/data/
-
 # Created by https://www.gitignore.io/api/gradle,eclipse,intellij,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=gradle,eclipse,intellij,visualstudiocode
 
@@ -186,3 +184,6 @@ gradle-app.setting
 
 # Download files
 /files/
+
+# Database files
+/data/
