--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=false
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:h2:file:./data/database;AUTO_SERVER=TRUE;
 spring.datasource.username=sa
